# ledgerlens

./: .gitignore  README.md  app.json  manifest.json  requirements.txt  setup.sh  smoke_test.sh
.anna/: app.json  dev-app.json
.github/workflows/: build-binary.yml
bundle/: app.js  index.html
demo/: DEMO.md  generasi_demo.py  generasi_demo_pdf.py  jalankan_demo.sh  mutasi_januari_2024.csv
demo/struk_pdf/: mutasi.csv
docs/: ALUR_KERJA.md  DEMO_DAY.md  SETUP_ANNA.md  STRATEGI.md  SUBMISSION.md  VIDEO_SCRIPT.md
executas/ledgerlens/: executa.json  ledgerlens_plugin.py  package_binary.sh  pyproject.toml
executas/ledgerlens/.anna/: executa.json
ui/: app.js  index.html  styles.css
